# bg3-fv-engine

./: .gitignore  CONTRIBUTING.md  README.md  README_da.md  README_zh.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dataset/: axiom_provenance.json  drs_items_seed.json
dataset/manual_annotations/: _gold_index.json  counterspell.json  fireball.json  hex.json
docs/: metrics_summary.json  table_metrics.tex
eval/: collect_metrics.py  evaluate_accuracy.py  run_feedback_loop.py
src/1_auto_formalizer/: crawler.py  database.py  drs_lean_export.py  llm_eval.py  llm_providers.py  llm_to_lean.py  models.py  wikitext_parser.py
src/2_fv_core/: lake-manifest.json  lakefile.lean
src/2_fv_core/Axioms/: BG3Rules.lean  DRSItems.lean
src/2_fv_core/Core/: Engine.lean  Types.lean
src/2_fv_core/Proofs/: Exploits.lean  Termination.lean
src/2_fv_core/Scenarios/: P10_DRSDamageCeiling.lean  P11_CounterspellWar.lean  P13_SneakAttackSAT.lean  P14_AdvantageAlgebra.lean  P16_UpcastEfficiency.lean  P17_DualWieldCrossover.lean  P21_DeathSaveMarkov.lean  P22_ActionSurgeExplosion.lean  P25_BardicInspirationDominance.lean  P26_GrappleShoveNim.lean  P27_FeatKnapsack.lean  P28_InitiativeFirstStrike.lean  P29_CoffeelockInfiniteSlots.lean  P30_WildMagicFairness.lean  (+5 more)
src/3_engine_bridge/: lean_parser.py  log_analyzer.py  lua_generator.py  probability_scenarios.py
tests/: conftest.py  test_axiom_provenance.py  test_database.py  test_drs_ingest.py  test_engine_bridge.py  test_llm_eval.py  test_models.py  test_p14_close_loop.py  test_wikitext_parser.py
(+12 files in other folders)
