[project]
name = "valor-fv-engine"
version = "0.1.0"
description = "Neuro-symbolic formal verification of BG3 game mechanics"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "rich>=13.7",
    "tenacity>=8.3",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers --tb=short"
filterwarnings = ["error"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
